# airg-test

./: .gitignore  README.md  pyproject.toml
airg_test/: task_one.py  task_three.py  task_two.py
tests/: test_task_one.py  test_task_three.py
tests/data/vehicles/: page1.json  page2.json
