[tool.poetry]
name = "airg-test"
version = "0.1.0"
description = ""
authors = ["Maxim Borisov <maxim.borisov@bedlamzd.dev>"]
readme = "README.md"
packages = [{include = "airg_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
pytest = "^7.2.1"
pyright = "^1.1.288"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
